# accretion-disks

./: README.md  pyproject.toml
accretion-disks/: basedisk.py  compact_object.py  shakurasunyaevdisk.py
accretion_disks/: advectivedisk.py  basedisk.py  compact_object.py  constants.py  diskwithoutflows.py  shakurasunyaevdisk.py
docs/: examples.ipynb
tests/: advectivedisk_test.py  compactobject_test.py  diskwithoutflows_test.py  shakurasunyaevdisk_test.py
